Added Total submission page

--- a/frontPage.html
+++ b/frontPage.html
@@ -17,7 +17,7 @@
                     <li><a href="./index.html" class="btn">Home</a></li>
                     <li><a href="./rating.html" class="btn">Contest Ratings</a></li>
                     <li><a href="./solved.html" class="btn">Solved Problems</a></li>
-                    <li><a href="./submission.html" class="btn">Total Submissions</a></li>
+                    <li><a href="./totalSubmissions.html" class="btn">Total Submissions</a></li>
                     <li><a href="./about.html" class="btn">About AL-TOG</a></li>
                 </ul>
             </nav>
