Added rating and changed coding platforms

--- a/about.html
+++ b/about.html
@@ -16,9 +16,8 @@
             <nav>
                 <ul>
                     <li><a href="./index.html" class="btn">Home</a></li>
+                    <li><a href="./frontPage.html" class="btn">Dashboard</a></li>
                     <li><a href="./rating.html" class="btn">Contest Ratings</a></li>
-                    <li><a href="./solved.html" class="btn">Solved Problems</a></li>
-                    <li><a href="./totalSubmissions.html" class="btn">Total Submissions</a></li>
                     <li><a href="./about.html" class="btn">About AL-TOG</a></li>
                 </ul>
             </nav>
@@ -31,14 +30,11 @@
             </div>
             <div class="aboutUs">
                 <h1>About AL-TOG</h1>
-                <p>A learning platform for all the competitive programmers by helping them analyze their progress and
-                    learn collaboratively by managing their friends.<strong>A tool to analyse and improve your
+                <p>A learning platform for all the competitive programmers by helping them learn and analyze their progress
+                    across all the platforms.<strong>A tool to analyse and improve your
                         Competitive Programming Progress.</strong>The goal is to
-                    keep people motivated in algorithmic programming and solve more and more problems.
-                    <strong>Find a friend who is similar to you and just compete among each other.</strong>
-                    This will make environment competitive and you'll definitely give your best. It will make things
-                    interesting. You will also upsolve when you got a nice company (/competitor). It's not like you are
-                    enemies, you will teach each other something.
+                    keep people motivated by helping them track their progress in data structure and algorithms and problem solving. 
+                    This encourages users to solve more and more problems and increase the accuracy
                 </p>
             </div>
             <div class="authors">
@@ -47,7 +43,7 @@
                 </div>
 
                 <div class="author1">
-                    <h3>Amitannsh Johri</h3>
+                    <h3>Amitansh Johri</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore incidunt praesentium dolores
                         fugit omnis magni, nesciunt, quod officiis mollitia modi architecto tempora porro debitis autem
                         quam iusto repellendus quas molestias voluptas odit ea magnam velit eveniet. Veritatis officiis
@@ -58,21 +54,21 @@
                         <div class="menu-items">
                             <div class="item1" id="item1">
                                 <center>
-                                    <a href="#">
+                                    <a href="https://github.com/Amitansh123">
                                         <i class="fa-brands fa-github"></i>
                                     </a>
                                 </center>
                         </div>
                             <div class="item2" id="item2">
                                 <center>
-                                    <a href="#">
+                                    <a href="https://www.linkedin.com/in/amitansh-johri-40635621a/">
                                         <i class="fa-brands fa-linkedin-in"></i>
                                     </a>
                                 </center>
                         </div>
                             <div class="item3" id="item3">
                                 <center>
-                                    <a href="#">
+                                    <a href="https://drive.google.com/file/d/19BljkSYC_--w-M4w4A2NVdHvwgDGK7qx/view">
                                         <i class="fa-solid fa-download"></i>
                                     </a>
                                 </center>
@@ -91,21 +87,21 @@
                         <div class="menu-items">
                             <div class="item1" id="item11">
                                 <center>
-                                    <a href="#">
+                                    <a href="https://github.com/Mrityuanjaya123">
                                         <i class="fa-brands fa-github"></i>
                                     </a>
                                 </center>
                         </div>
                             <div class="item2" id="item21">
                                 <center>
-                                    <a href="#">
+                                    <a href="https://www.linkedin.com/in/mrityuanjaya-gupta-a06834219/">
                                         <i class="fa-brands fa-linkedin-in"></i>
                                     </a>
                                 </center>
                         </div>
                             <div class="item3" id="item31">
                                 <center>
-                                    <a href="#">
+                                    <a href="https://drive.google.com/file/d/15YwH-22ZSAvq9pcdIWyQiKrUTxuEAiu4/view?usp=sharing">
                                         <i class="fa-solid fa-download"></i>
                                     </a>
                                 </center>
@@ -124,21 +120,21 @@
                         <div class="menu-items">
                             <div class="item1" id="item12">
                                 <center>
-                                    <a href="#">
+                                    <a href="https://github.com/Nancyyadav7">
                                         <i class="fa-brands fa-github"></i>
                                     </a>
                                 </center>
                         </div>
                             <div class="item2" id="item22">
                                 <center>
-                                    <a href="#">
+                                    <a href="https://www.linkedin.com/in/nancy-yadav-661789197/">
                                         <i class="fa-brands fa-linkedin-in"></i>
                                     </a>
                                 </center>
                         </div>
                             <div class="item3" id="item32">
                                 <center>
-                                    <a href="#">
+                                    <a href="https://drive.google.com/file/d/1MxxgV0uY5qtC5rskbXAkAyDqrdFHEuwC/view?usp=sharing">
                                         <i class="fa-solid fa-download"></i>
                                     </a>
                                 </center>
