--- a/frontPage.html
+++ b/frontPage.html
@@ -15,9 +15,9 @@
             <nav>
                 <ul>
                     <li><a href="./index.html" class="btn">Home</a></li>
+                    <li><a href="./frontPage.html" class="btn">Dashboard</a></li>
                     <li><a href="./rating.html" class="btn">Contest Ratings</a></li>
-                    <li><a href="./solved.html" class="btn">Solved Problems</a></li>
-                    <li><a href="./totalSubmissions.html" class="btn">Total Submissions</a></li>
+                    <!-- <li><a href="./totalSubmissions.html" class="btn">Total Submissions</a></li> -->
                     <li><a href="./about.html" class="btn">About AL-TOG</a></li>
                 </ul>
             </nav>
@@ -34,21 +34,18 @@
                     <div class="center circle" onclick="pop()">
                         <img src="./images/target_image.png" alt="accuracy_icon">
                     </div>
-                    
-                    <div class="profile" id="codechef_profile">
-                        <a href="#"><img src="./images/codechef_logo.png" alt="codechef_logo" srcset="" class="circle"></a>
-                    </div>
+
                     <div class="profile" id="codeforces_profile">
-                        <a href="#"><img src="./images/codeforces_logo.png" alt="codeforces_logo" srcset="" class="circle"></a>
-                    </div>
-                    <div class="profile" id="hackerearth_profile">
-                        <a href="#"><img src="./images/hackerearth_logo.jpg" alt="hackerearth_logo" srcset="" class="circle"></a>
-                    </div>
-                    <div class="profile" id="hackerrank_profile">
-                        <a href="#"><img src="./images/hackerrank_logo.png" alt="hackerrank_logo" srcset="" class="circle"></a>
+                        <a href="#" target="_blank"><img src="./images/codeforces_logo.png" alt="codeforces_logo" srcset="" class="circle"></a>
                     </div>
                     <div class="profile" id="leetcode_profile">
-                        <a href="#"><img src="./images/leetcode_logo.png" alt="leetcode_logo" srcset="" class="circle"></a>
+                        <a href="#" target="_blank"><img src="./images/leetcode_logo.png" alt="leetcode_logo" srcset="" class="circle"></a>
+                    </div>
+                    <div class="profile" id="spoj_profile">
+                        <a href="#" target="_blank"><img src="./images/spoj_logo.jpeg" alt="spoj_logo" srcset="" class="circle"></a>
+                    </div>
+                    <div class="profile" id="atcoder_profile">
+                        <a href="#" target="_blank"><img src="./images/atcoder_logo.png" alt="atcoder_logo" srcset="" class="circle"></a>
                     </div>
                 </div>
             </div>
