--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@
         </div>
         <div class="container">
             <div class="login_container">
-                <h1>LOGIN</h1>
-                <p class="light_text" id="login_text">Please enter your login and password</p>
-                <input type="text" name="username" id="username" placeholder="Username">
-                <input type="password" name="password" id="password" placeholder="Password">
-                <p class="light_text underline" id="forgot_password">Forgot Password?</p>
+                <h1>ENTER USER DETAILS</h1>
+                <p class="light_text" id="login_text">Please enter your usernames</p>
+                <input type="text" name="name" id="name" placeholder="Enter your name">
+                <input type="text" name="CodeForcesUsername" id="CFusername" placeholder="CodeForces Username">
+                <input type="text" name="LeetCodeUsername" id="LCusername" placeholder="LeetCode Username">
+                <input type="text" name="SpojUsername" id="SPusername" placeholder="Spoj Username">
+                <input type="text" name="AtCoderUsername" id="ACusername" placeholder="AtCoder Username">
+                
                 <a href="./frontPage.html">
-                    <button  class = "btn" type="submit">Login</button>
+                    <button  class = "btn" type="submit">Submit</button>
                 </a>
             </div>
         </div>
     </div>
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
